# vegafusion

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  CODEOWNERS  Cargo.toml  GOVERNANCE.md  README.md  RELEASE.md  pixi.toml  ruff.toml
examples/rust-examples/: Cargo.toml
python/vegafusion/: LICENSE.txt  README.md  pyproject.toml  setup.cfg
python/vegafusion-jupyter/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  altairfusion_jupyter.json  babel.config.js  codecov.yml  conda-linux-64-3.10.lock.yml  conda-linux-64-3.7.lock.yml  conda-linux-64-3.8.lock.yml  conda-linux-64-cp310.lock.yml  conda-linux-64-cp37.lock.yml  conda-linux-64.lock.yml  conda-osx-64-3.10.lock.yml  conda-osx-64-3.7.lock.yml  conda-osx-64-3.8.lock.yml  conda-osx-64-cp310.lock.yml  conda-osx-64-cp37.lock.yml  conda-osx-64.lock.yml  conda-win-64-3.10.lock.yml  conda-win-64-3.7.lock.yml  conda-win-64-3.8.lock.yml  conda-win-64-cp310.lock.yml  conda-win-64-cp37.lock.yml  conda-win-64.lock.yml  dev-environment-3.10.yml  dev-environment-3.7.yml  dev-environment-3.8.yml  dev-environment.yml  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tsconfig.json  vegafusion-jupyter.json  (+2 more)
vega-fusion/: Cargo.toml
vega-fusion/src/: error.rs  lib.rs
vega-fusion/tests/: test_collect.rs  test_expression_evaluation.rs  test_expression_parsing.rs  test_transform_aggregate.rs  test_transform_bin.rs  test_transform_extent.rs  test_transform_filter.rs  test_transform_formula.rs  test_vegajs_runtime.rs  try_vegajs_runtime.rs
vegafusion-common/: CLAUDE.md  Cargo.toml  README.md
vegafusion-common/src/: column.rs  datatypes.rs  error.rs  escape.rs  lib.rs
vegafusion-core/: CLAUDE.md  Cargo.toml  README.md  build.rs
vegafusion-core/src/: chart_state.rs  error.rs  lib.rs  patch.rs  runtime.rs
vegafusion-dataframe/: Cargo.toml  README.md
vegafusion-dataframe/src/: connection.rs  csv.rs  dataframe.rs  lib.rs
vegafusion-datafusion-udfs/: Cargo.toml  README.md
vegafusion-datafusion-udfs/src/: lib.rs
vegafusion-jni/: Cargo.toml  README.md
vegafusion-jni/src/: lib.rs
vegafusion-python/: .mypy.ini  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  ruff.toml
vegafusion-python-embed/: Cargo.toml  README.md  pyproject.toml
vegafusion-python-embed/src/: connection.rs  dataframe.rs  lib.rs
vegafusion-python/checks/: README.md  check_lazy_imports.py
vegafusion-python/proto/: SOURCE.txt  datafusion.proto
vegafusion-python/src/: chart_state.rs  connection.rs  lib.rs  plan_resolver.rs  unparse.rs  utils.rs
vegafusion-python/tests/: test_altair_mocks.py  test_datasource.py  test_get_column_usage.py  test_input_utc.py  test_jupyter_widget.py  test_plan_resolver.py  test_pretransform.py  test_pretransform_specs.py  test_sql_dataset.py  test_transformed_data.py  test_transformer.py
vegafusion-python/vegafusion/: __init__.py  dataset.py  jupyter.py  local_tz.py  plan_resolver.py  runtime.py  transformer.py  utils.py
vegafusion-rt-datafusion/: Cargo.toml
vegafusion-rt-datafusion/benches/: spec_benchmarks.rs
vegafusion-rt-datafusion/src/: lib.rs  tokio_runtime.rs
vegafusion-rt-datafusion/tests/: test_collect.rs  test_destringify_selection_datasets.rs  test_expression_evaluation.rs  test_expression_parsing.rs  test_image_comparison.rs  test_parsing.rs  test_planning.rs  test_pre_transform_values.rs  test_projection_pushdown.rs  test_query_sqlite.rs  test_selection.rs  test_sql_pre_transform.rs  test_stringify_datetimes.rs  test_task_graph_runtime.rs  test_transform_aggregate.rs  test_transform_bin.rs  test_transform_extent.rs  test_transform_filter.rs  test_transform_fold.rs  test_transform_formula.rs  test_transform_identifier.rs  test_transform_impute.rs  test_transform_joinaggregate.rs  test_transform_pivot.rs  test_transform_project.rs  test_transform_stack.rs  test_transform_window.rs  test_vegajs_runtime.rs
vegafusion-runtime/: CLAUDE.md  Cargo.toml  README.md
vegafusion-runtime/benches/: spec_benchmarks.rs
vegafusion-runtime/src/: lib.rs  plan_executor.rs  tokio_runtime.rs
vegafusion-runtime/tests/: generate_sqllite_database.py  test_chart_state.rs  test_destringify_selection_datasets.rs  test_expression_evaluation.rs  test_expression_parsing.rs  test_image_comparison.rs  test_logical_plan.rs  test_plan_executor.rs  test_plan_resolver.rs  test_planning.rs  test_pre_transform_extract.rs  test_pre_transform_keep_variables.rs  test_pre_transform_values.rs  test_projection_pushdown.rs  test_selection.rs  test_stringify_datetimes.rs  test_task_graph_runtime.rs  test_transform_aggregate.rs  test_transform_bin.rs  test_transform_extent.rs  test_transform_facet.rs  test_transform_filter.rs  test_transform_fold.rs  test_transform_formula.rs  test_transform_impute.rs  test_transform_joinaggregate.rs  test_transform_mark_encoding.rs  test_transform_pivot.rs  test_transform_sequence.rs  test_transform_stack.rs  test_transform_window.rs  test_vegajs_runtime.rs
vegafusion-server/: CLAUDE.md  Cargo.toml  README.md  build.rs
vegafusion-server/proto/: helloworld.proto
vegafusion-server/src/: main.rs  server.rs  vegafusion-server.rs
vegafusion-server/tests/: test_task_graph_runtime.rs
vegafusion-sql/: Cargo.toml  README.md
vegafusion-sql/src/: lib.rs
vegafusion-sql/tests/: generate_sqllite_database.py  test_aggregate.rs  test_connection_dialect.rs  test_filter.rs  test_fold.rs  test_impute.rs  test_joinaggregate.rs  test_limit.rs  test_query_sqlite.rs  test_select.rs  test_sort.rs  test_stack.rs  test_values.rs  test_window.rs
vegafusion-wasm/: CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
vegafusion-wasm-runtime/: Cargo.toml  README.md  package.json
vegafusion-wasm-runtime/js/: makeRuntimeQueryFn.js  workerHelpers.worker.js
vegafusion-wasm-runtime/scripts/: update-pkg.js
vegafusion-wasm-runtime/src/: lib.rs
vegafusion-wasm/examples/: websocket_server.rs
vegafusion-wasm/js/: vega_utils.js  workerHelpers.js  workerHelpers.worker.js
wasm-driver/: Cargo.toml  package-lock.json  package.json
(+1650 files in other folders)
