[workspace]
resolver = "2"
members = [ "vegafusion-common", "vegafusion-core", "vegafusion-runtime", "vegafusion-python", "vegafusion-wasm", "vegafusion-server", "examples/rust-examples",]

[workspace.dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
url = "2.5.4"
cfg-if = "1.0.0"

[profile.release]
opt-level = "z"
codegen-units = 1

[profile.release-dev]
inherits = "release"
opt-level = 3

[profile.release-opt]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "debuginfo"

[profile.release-small]
inherits = "release"
opt-level = "z"
codegen-units = 1

[workspace.dependencies.arrow]
version = "55.1.0"
default-features = false

[workspace.dependencies.sqlparser]
version = "0.55.0"
default-features = false
features = [ "std", "visitor",]

[workspace.dependencies.chrono]
version = "0.4.35"
default-features = false

[workspace.dependencies.ahash]
version = "0.8.12"
default-features = false
features = [ "std", "getrandom",]

[workspace.dependencies.chrono-tz]
version = "0.9.0"
features = [ "case-insensitive", "filter-by-regex",]

[workspace.dependencies.reqwest]
version = "0.12.11"
default-features = false

[workspace.dependencies.tonic]
version = "0.12.3"

[workspace.dependencies.tonic-web]
version = "0.12.3"

[workspace.dependencies.tonic-build]
version = "0.12.3"

[workspace.dependencies.tokio]
version = "1.36.0"

[workspace.dependencies.pyo3]
version = "0.25.0"

[workspace.dependencies.pythonize]
version = "0.25.0"

[workspace.dependencies.pyo3-arrow]
version = "0.10.1"
default-features = false

[workspace.dependencies.prost]
version = "0.13.3"

[workspace.dependencies.prost-types]
version = "0.13.3"

[workspace.dependencies.prost-build]
version = "0.13.3"

[workspace.dependencies.object_store]
version = "0.12.0"

[workspace.dependencies.object-store-wasm]
version = "0.0.7"

[workspace.dependencies.lazy_static]
version = "1.5"

[workspace.dependencies.serde_json]
version = "1.0.140"
default-features = false

[workspace.dependencies.datafusion]
version = "48.0.0"
default-features = false
features = [ "nested_expressions",]

[workspace.dependencies.datafusion-common]
version = "48.0.0"
default-features = false

[workspace.dependencies.datafusion-expr]
version = "48.0.0"

[workspace.dependencies.datafusion-proto]
version = "48.0.0"
default-features = false
features = [ "parquet",]

[workspace.dependencies.datafusion-proto-common]
version = "48.0.0"
default-features = false

[workspace.dependencies.datafusion-physical-expr]
version = "48.0.0"
default-features = false

[workspace.dependencies.datafusion-optimizer]
version = "48.0.0"
default-features = false

[workspace.dependencies.datafusion-functions]
version = "48.0.0"
default-features = false

[workspace.dependencies.datafusion-functions-nested]
version = "48.0.0"

[workspace.dependencies.datafusion-functions-aggregate]
version = "48.0.0"

[workspace.dependencies.datafusion-functions-window]
version = "48.0.0"

[workspace.dependencies.thiserror]
version = "1.0.69"

[workspace.dependencies.serde]
version = "1.0.216"
features = [ "derive",]

[workspace.dependencies.regex]
version = "1.11.1"

[workspace.dependencies.bytes]
version = "1.9.0"

[workspace.dependencies.env_logger]
version = "0.11.5"

[workspace.dependencies.ordered-float]
version = "3.9.2"

[workspace.dependencies.itertools]
version = "0.12.1"

[workspace.dependencies.log]
version = "0.4.22"

[workspace.dependencies.uuid]
version = "1.11.0"

[workspace.dependencies.base64]
version = "0.22.1"

[workspace.dependencies.tempfile]
version = "3.14.0"

[workspace.dependencies.num-traits]
version = "0.2.19"

[workspace.dependencies.getrandom]
version = "0.3"

[patch.crates-io.datafusion]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-common]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-expr]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-proto]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-proto-common]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-physical-expr]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-optimizer]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-functions]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-functions-nested]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-functions-aggregate]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-functions-window]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"

[patch.crates-io.datafusion-sql]
git = "https://github.com/jonmmease/arrow-datafusion"
branch = "fix-sqlparser-wasm-compatibility"
