[package]
name = "vega-fusion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.29"
regex = "^1.5.4"
lazy_static = "^1.4.0"
ordered-float = "^2.8.0"
serde = {version="1.0.126", features=["derive"]}
serde_json = "1.0.68"
chrono = "0.4.19"
datafusion = { path = "../../../repos/arrow-datafusion/datafusion" }
num-traits = "0.2.14"
itertools = "0.10.1"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
deno_core = "0.101.0"
reqwest = {version="0.11.4", features=["blocking"]}
futures = "0.3.17"
futures-util = "0.3.17"
rstest = "0.11.0"
resvg = "0.18.0"
usvg = "0.18.0"
tiny-skia = "0.6.1"
