[package]
name = "vegafusion-common"
version = "1.5.0-rc1"
edition = "2021"
description = "Common components required by multiple VegaFusion crates"
license = "BSD-3-Clause"

[features]
pyarrow = [ "pyo3", "arrow/pyarrow",]
json = [ "serde_json", "arrow/json", "chrono",]
prettyprint = [ "arrow/prettyprint",]

[dependencies]
thiserror = "^1.0.29"

[dependencies.chrono]
workspace = true
optional = true

[dependencies.sqlparser]
workspace = true
optional = true

[dependencies.serde_json]
version = "1.0.91"
default_features = false
optional = true

[dependencies.arrow]
workspace = true
features = [ "ipc",]

[dependencies.datafusion-common]
workspace = true
default_features = false

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-proto]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.jni]
version = "0.21.1"
optional = true

[dependencies.base64]
version = "0.21.2"
optional = true

[dependencies.object_store]
workspace = true
optional = true
