[package]
name = "vegafusion-common"
version = "1.6.9"
edition = "2021"
description = "Common components required by multiple VegaFusion crates"
license = "BSD-3-Clause"

[features]
py = ["pyo3", "pyo3-arrow"]
json = ["serde_json/preserve_order", "arrow/json", "chrono"]
prettyprint = ["arrow/prettyprint"]
proto = ["datafusion-proto", "datafusion-proto-common"]

[dependencies]
thiserror = "^1.0.29"

[dependencies.deterministic-hash]
workspace = true

[dependencies.chrono]
workspace = true
optional = true

[dependencies.sqlparser]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
default-features = false
optional = true

[dependencies.arrow]
workspace = true
features = ["ipc"]

[dependencies.datafusion-common]
workspace = true

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-functions]
workspace = true
features = ["core_expressions", "string_expressions", "datetime_expressions", "hashbrown"]

[dependencies.datafusion-proto]
workspace = true
optional = true

[dependencies.datafusion-proto-common]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.pyo3-arrow]
workspace = true
optional = true

[dependencies.jni]
version = "0.21.1"
optional = true

[dependencies.base64]
version = "0.21.2"
optional = true

[dependencies.object_store]
workspace = true
optional = true