[package]
name = "vegafusion-common"
version = "2.0.3"
edition = "2021"
description = "Common components required by multiple VegaFusion crates"
license = "BSD-3-Clause"

[features]
py = ["pyo3", "pyo3-arrow"]
json = ["serde_json/preserve_order", "arrow/json", "chrono"]
prettyprint = ["arrow/prettyprint"]
proto = ["datafusion-proto", "datafusion-proto-common", "prost"]

[dependencies.chrono]
workspace = true
optional = true

[dependencies.sqlparser]
workspace = true
optional = true

[dependencies.ahash]
workspace = true

[dependencies.serde_json]
workspace = true
default-features = false
optional = true

[dependencies.arrow]
workspace = true
features = ["ipc"]

[dependencies.datafusion-common]
workspace = true
default-features = false

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-functions]
workspace = true
features = ["math_expressions", "string_expressions", "datetime_expressions"]

[dependencies.datafusion-functions-nested]
workspace = true

[dependencies.datafusion-proto]
workspace = true
optional = true
default-features = false

[dependencies.datafusion-proto-common]
workspace = true
optional = true
default-features = false

[dependencies.prost]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.pyo3-arrow]
workspace = true
optional = true

[dependencies.url]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true

[dependencies.base64]
workspace = true
optional = true

[dependencies.object_store]
workspace = true
optional = true
