[package]
name = "vegafusion-core"
license = "BSD-3-Clause"
edition = "2021"
version = "1.6.9"
description = "Core components required by multiple VegaFusion crates, with WASM compatibility"

[features]
tonic_support = ["tonic", "tonic-build"]
py = ["pyo3", "vegafusion-common/py"]
substrait = ["datafusion-substrait"]

[dependencies]
thiserror = "^1.0.29"
bytes = "1.1.0"
itertools = "0.10.3"
regex = "^1.5.5"
ordered-float = "3.6.0"
petgraph = "0.6.0"
chrono = "0.4.23"
num-complex = "0.4.2"
rand = "0.8.5"
json-patch = "1.0.0"
log = "0.4.22"

[dependencies.lazy_static]
workspace = true

[dependencies.deterministic-hash]
 workspace = true

[dependencies.prost]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.sqlparser]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
features = ["preserve_order"]

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["json", "sqlparser"]
version = "1.6.9"

[dependencies.datafusion-common]
workspace = true
default-features = false

[dependencies.datafusion-substrait]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tonic]
workspace = true
optional = true

[build-dependencies.prost-build]
workspace = true

[build-dependencies.tonic-build]
workspace = true
optional = true

[build-dependencies.protobuf-src]
version = "1.1.0"
optional = true
