[package]
name = "vegafusion-core"
license = "BSD-3-Clause"
edition = "2021"
version = "2.0.3"
description = "Core components required by multiple VegaFusion crates, with WASM compatibility"

[features]
tonic_support = ["tonic", "tonic-build"]
py = ["pyo3", "vegafusion-common/py"]

[dependencies]
petgraph = "0.8.2"
rand = "0.9.0"

[dependencies.lazy_static]
workspace = true

[dependencies.ahash]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.sqlparser]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
features = ["preserve_order"]

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["json", "sqlparser"]
version = "2.0.3"

[dependencies.datafusion-common]
workspace = true
default-features = false

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tonic]
workspace = true
optional = true

[lints.clippy]
module_inception = "allow"

[build-dependencies.prost-build]
workspace = true

[build-dependencies.tonic-build]
workspace = true
optional = true

[build-dependencies.protobuf-src]
version = "2.1.1"
optional = true
