[package]
name = "vegafusion-dataframe"
license = "BSD-3-Clause"
version = "1.6.5"
edition = "2021"
description = "VegaFusion's DataFrame and Connection traits"

[features]
pyarrow = [ "pyo3", "datafusion-common/pyarrow", "vegafusion-common/pyarrow",]

[dependencies]
async-trait = "0.1.73"

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.5"

[dependencies.datafusion-common]
workspace = true

[dependencies.datafusion-expr]
workspace = true

[dependencies.arrow]
workspace = true
default_features = false

[dependencies.pyo3]
workspace = true
optional = true
