[package]
name = "vegafusion-dataframe"
license = "BSD-3-Clause"
version = "1.6.9"
edition = "2021"
description = "VegaFusion's DataFrame and Connection traits"


[dependencies.async-trait]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.9"

[dependencies.sqlparser]
workspace = true

[dependencies.datafusion-common]
workspace = true

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-functions-window]
workspace = true

[dependencies.arrow]
workspace = true

[dependencies.pyo3]
workspace = true
optional = true
