[package]
name = "vegafusion-datafusion-udfs"
license = "BSD-3-Clause"
version = "1.6.3"
edition = "2021"
description = "Custom DataFusion UDFs used by VegaFusion"

[dependencies]
ordered-float = "3.6.0"
lazy_static = "^1.4.0"
chrono-tz = "0.8.1"
regex = "^1.5.5"

[dependencies.chrono]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.3"

[dependencies.datafusion-physical-expr]
workspace = true
