[package]
name = "vegafusion-datafusion-udfs"
license = "BSD-3-Clause"
version = "1.6.9"
edition = "2021"
description = "Custom DataFusion UDFs used by VegaFusion"

[dependencies]
ordered-float = "3.6.0"
regex = "^1.5.5"

[dependencies.lazy_static]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.9"

[dependencies.datafusion-physical-expr]
workspace = true

[dependencies.datafusion-functions]
workspace = true
