[package]
name = "vegafusion-jni"
version = "1.3.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
serde_json = "1.0.96"

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.3.0-rc1"
features = ["jni"]

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = [ "tonic_support",]
version = "1.3.0-rc1"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "1.3.0-rc1"

[dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.3.0-rc1"
features = [ "datafusion-conn",]

[dependencies.tokio]
version = "1.27.0"
features = [ "macros", "rt-multi-thread",]
