[package]
name = "vegafusion-jni"
version = "1.4.5"
edition = "2021"

[lib]
crate_type = [ "cdylib",]

[features]
protobuf-src = [ "vegafusion-core/protobuf-src",]

[dependencies]
jni = "0.21.1"
serde_json = "1.0.96"

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.4.5"
features = [ "jni",]

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = [ "tonic_support",]
version = "1.4.5"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "1.4.5"

[dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.4.5"
features = [ "datafusion-conn",]

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread",]
