[package]
name = "vegafusion-python-embed"
license = "BSD-3-Clause"
edition = "2021"
version = "1.4.0-rc2"
description = "vegafusion-python-embed PyO3 Python Package"

[lib]
name = "vegafusion_embed"
crate-type = [ "cdylib",]

[features]
protobuf-src = [ "vegafusion-core/protobuf-src",]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
pythonize = "0.19.0"
async-trait = "0.1.53"
uuid = "1.3.0"

[dependencies.deterministic-hash]
version = "1.0.1"

[dependencies.serde]
version = "1.0.137"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.arrow]
version = "42.0.0"
features = [ "pyarrow",]

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = [ "pyo3",]
version = "1.4.0-rc2"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = [ "pyarrow",]
version = "1.4.0-rc2"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
features = [ "pyarrow",]
version = "1.4.0-rc2"

[dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.4.0-rc2"
features = [ "datafusion-conn",]

[dependencies.tokio]
version = "1.27.0"
features = [ "macros", "rt-multi-thread",]

[dependencies.pyo3]
version = "0.19"
features = [ "extension-module", "abi3-py38",]
