[package]
name = "vegafusion-python-embed"
license = "BSD-3-Clause"
edition = "2021"
version = "1.6.0"
description = "vegafusion-python-embed PyO3 Python Package"

[lib]
name = "vegafusion_embed"
crate-type = [ "cdylib",]

[features]
protobuf-src = [ "vegafusion-core/protobuf-src",]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
pythonize = "0.19.0"
async-trait = "0.1.73"
uuid = "1.3.0"

[dependencies.prost]
workspace = true

[dependencies.deterministic-hash]
version = "1.0.1"

[dependencies.serde]
version = "1.0.137"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.arrow]
workspace = true
features = [ "pyarrow",]

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = [ "pyo3", "datafusion-proto", "base64",]
version = "1.6.0"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = [ "pyarrow",]
version = "1.6.0"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
features = [ "pyarrow",]
version = "1.6.0"

[dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.6.0"
features = [ "datafusion-conn", "pyarrow",]

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.6.0"

[dependencies.datafusion-proto]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "rt-multi-thread",]

[dependencies.pyo3]
workspace = true
features = [ "extension-module", "abi3-py38",]
