[package]
name = "vegafusion"
license = "BSD-3-Clause"
edition = "2021"
version = "1.6.9"
description = "VegaFusion Python interface"

[lib]
name = "vegafusion"
crate-type = ["cdylib"]

[features]
protobuf-src = ["vegafusion-core/protobuf-src"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
uuid = "1.3.0"
sysinfo = "0.32.0"

[dependencies.async-trait]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.pythonize]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.deterministic-hash]
version = "1.0.1"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.79"

[dependencies.arrow]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["pyo3", "proto", "base64"]
version = "1.6.9"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["py"]
version = "1.6.9"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "1.6.9"

[dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.6.9"
features = ["datafusion-conn"]

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.6.9"

[dependencies.datafusion-proto]
workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.pyo3]
workspace = true
features = ["extension-module", "abi3-py39"]

[dependencies.pyo3-arrow]
workspace = true