[package]
name = "vegafusion"
license = "BSD-3-Clause"
edition = "2021"
version = "2.0.3"
description = "VegaFusion Python interface"

[lib]
name = "vegafusion"
crate-type = ["cdylib"]

[features]
protobuf-src = ["vegafusion-core/protobuf-src"]

[dependencies]
sysinfo = "0.35.0"

[dependencies.async-trait]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.pythonize]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.tonic]
workspace = true
features = ["tls"]

[dependencies.log]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.arrow]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["pyo3", "base64"]
version = "2.0.3"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["py", "tonic_support"]
version = "2.0.3"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "2.0.3"

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "time"]

[dependencies.pyo3]
workspace = true
features = ["extension-module", "abi3-py39"]

[dependencies.pyo3-arrow]
workspace = true
