[project]
name = "vegafusion"
version = "1.6.9"
description = "Core tools for using VegaFusion from Python"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["vega", "altair", "vegafusion", "arrow"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["pyarrow>=16", "arro3-core", "pandas", "psutil", "protobuf"]
[[project.authors]]
name = "VegaFusion Contributors"

[build-system]
requires = ["maturin>=1.1.0,<2"]
build-backend = "maturin"

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://vegafusion.io"
Repository = "https://github.com/hex-inc/vegafusion"
Documentation = "https://vegafusion.io"

[tool.maturin]
module-name = "vegafusion._vegafusion"
