[project]
name = "vegafusion"
version = "2.0.0"
description = "Core tools for using VegaFusion from Python"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["vega", "altair", "vegafusion", "arrow"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["arro3-core", "packaging", "narwhals>=1.13"]
[[project.authors]]
name = "VegaFusion Contributors"

[build-system]
requires = ["maturin>=1.1.0,<2"]
build-backend = "maturin"

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://vegafusion.io"
Repository = "https://github.com/hex-inc/vegafusion"
Documentation = "https://vegafusion.io"

[project.optional-dependencies]
embed = []

[tool.maturin]
module-name = "vegafusion._vegafusion"
