[[bench]]
name = "spec_benchmarks"
harness = false

[package]
name = "vegafusion-rt-datafusion"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
regex = "^1.5.4"
lazy_static = "^1.4.0"
serde_json = "1.0.79"
chrono = "0.4.19"
chrono-tz = "0.6.1"
prost = "0.9.0"
prost-types = "0.9.0"
num-traits = "0.2.14"
itertools = "0.10.1"
float-cmp = "0.9.0"
lru = "0.7.0"
futures = "0.3.17"
async-trait = "0.1.51"
async-recursion = "0.3.2"
async-lock = "2.4.0"
tempfile = "3.2.0"
futures-util = "0.3.17"
bytes = "1.1.0"

[dev-dependencies]
futures = "0.3.17"
futures-util = "0.3.17"
rstest = "0.11.0"
test-case = "1.2.1"
base64 = "0.13.0"
dssim = "3.1.0"
rgb = "0.8.27"
lodepng = "3.4.6"

[dependencies.vegafusion-core]
path = "../vegafusion-core"

[dependencies.serde]
version = "1.0.136"
features = [ "derive",]

[dependencies.datafusion]
git = "https://github.com/apache/arrow-datafusion.git"
rev = "4c2320e783ddf54086d345b8d4e3d8a70611aab4"

[dependencies.datafusion-expr]
git = "https://github.com/apache/arrow-datafusion.git"
rev = "4c2320e783ddf54086d345b8d4e3d8a70611aab4"

[dependencies.tokio]
version = "1.10.1"
features = [ "macros", "rt-multi-thread",]

[dependencies.reqwest]
version = "0.11.4"
default_features = false
features = [ "rustls-tls",]

[dev-dependencies.reqwest]
version = "0.11.4"
default_features = false
features = [ "blocking", "rustls-tls",]

[dev-dependencies.criterion]
version = "0.3"
features = [ "async_tokio",]
