[[bench]]
name = "spec_benchmarks"
harness = false

[package]
name = "vegafusion-rt-datafusion"
license = "AGPL-3.0-or-later"
edition = "2021"
version = "0.10.0"

[features]
pyarrow = [ "vegafusion-core/pyarrow",]

[dependencies]
regex = "^1.5.5"
lazy_static = "^1.4.0"
serde_json = "1.0.81"
chrono = "0.4.19"
chrono-tz = "0.6.1"
prost = "0.10.3"
prost-types = "0.10.1"
num-traits = "0.2.14"
itertools = "0.10.3"
float-cmp = "0.9.0"
lru = "0.7.5"
futures = "0.3.21"
async-trait = "0.1.53"
async-recursion = "0.3.2"
async-lock = "2.5.0"
tempfile = "3.3.0"
futures-util = "0.3.21"
bytes = "1.1.0"

[dev-dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
rstest = "0.12.0"
test-case = "1.2.1"
base64 = "0.13.0"
dssim = "3.1.0"
rgb = "0.8.32"
lodepng = "3.6.1"

[dependencies.vegafusion-core]
path = "../vegafusion-core"

[dependencies.serde]
version = "1.0.137"
features = [ "derive",]

[dependencies.datafusion]
git = "https://github.com/apache/arrow-datafusion.git"
rev = "b2be7abd6fb4154f725cc4235318515f1183619a"

[dependencies.datafusion-expr]
git = "https://github.com/apache/arrow-datafusion.git"
rev = "b2be7abd6fb4154f725cc4235318515f1183619a"

[dependencies.tokio]
version = "1.18.1"
features = [ "macros", "rt-multi-thread",]

[dependencies.reqwest]
version = "0.11.10"
default_features = false
features = [ "rustls-tls",]

[dev-dependencies.reqwest]
version = "0.11.10"
default_features = false
features = [ "blocking", "rustls-tls",]

[dev-dependencies.criterion]
version = "0.3.5"
features = [ "async_tokio",]
